--- a/bash.yml
+++ b/bash.yml
@@ -34,12 +34,12 @@ pipelines:
                 name: node
                 tag: latest
                 options: ""
-        requires:
-          resources:
-            - bash              
-#         triggeredBy:
+#         requires:
 #           resources:
-#             - bash
+#             - bash              
+        triggeredBy:
+          resources:
+            - bash
         execution:
           onStart:
             - printenv
