--- a/bash.yml
+++ b/bash.yml
@@ -34,9 +34,9 @@ pipelines:
                 name: node
                 tag: latest
                 options: ""
-#         requires:
-#           resources:
-#             - bash              
+        requires:
+          resources:
+            - bash              
         triggeredBy:
           resources:
             - bash
