--- a/bash.yml
+++ b/bash.yml
@@ -29,12 +29,12 @@ pipelines:
                 name: node
                 tag: latest
                 options: ""
-#         requires:
-#           resources:
-#             - bash              
-#         triggeredBy:
-#           resources:
-#             - bash
+        requires:
+          resources:
+            - bash              
+        triggeredBy:
+          resources:
+            - bash
         execution:
           onStart:
             - printenv
